--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div style="width: 50%; max-height: 100%;">
         <img src="profile.jpg" alt="profile-picture">
     </div>
-    <div style="padding: 20px; font-family: 'Times New Roman', Times, serif;">
+    <div style="padding: 20px;">
         <h6>Hello Everyone, Im</h6>
         <h2>Abdulla Arif</h2>
         <hr>
