--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div style="padding: 20px;">
         <h6>Hello Everyone, Im</h6>
-        <h2>Abdulla Arif</h2>
+        <h2 style="color: azure;">Abdulla Arif</h2>
         <hr>
         <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum cupiditate vitae tempore eligendi quas quidem</p>
