--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Education</li>
-            <li>Skills</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Education</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 </body>
