--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="bg-container">
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
@@ -17,5 +18,6 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    </div>
 </body>
 </html>
