--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profile</title>
+    <title>Web Development Course</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,6 +18,18 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+
+    <div class="landing-page">
+        <h1>Wanna be an Astronaut?</h1>
+        <h3>This is your chance to become a top Astronaut</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam enim adipisci, id consequatur optio hic illo natus tempora fugit nisi assumenda placeat harum, et ipsam suscipit. Aperiam aliquid minima at.</p>
+    
+        <div class="home-button">
+            <button>Get Started</button>
+        </div>
+    
+    </div>
+
     </div>
 </body>
 </html>
